<resources>
    <string name="app_name">أجهور الكبرى</string>

    <string name="admob_app_id">ca-app-pub-1747848120826315~3829017498</string>
    <string name="ad_banner_unit_id">ca-app-pub-1747848120826315/1405022371</string>
    <string name="ad_native_unit_id">ca-app-pub-1747848120826315/1213450688</string>
    <string name="ad_interstitial_unit_id">ca-app-pub-1747848120826315/5313489556</string>
    <string name="ad_rewarded_unit_id">ca-app-pub-1747848120826315/9232546748</string>

    <string name="login_email_hint">البريد الالكتروني</string>
    <string name="login_password_hint">كلمة السر</string>
    <string name="login_signup_hint">ليس لديك حساب ؟ سجل الأن</string>
    <string name="aghour_logo">Aghour Logo</string>
    <string name="add_data">بـيـانـات (مطعم-دكتور....إلخ)</string>

    <string name="add_article_hint">أكتب شيئا .</string>
    <string name="publish_article">نشر الخبر</string>
    <string name="use_app">
        من خلال استخدامك لتطبيق خدمات أجهور الكبرى هذا بمثابة دليل شامل للقرية، فالتطبيق يضم الكثير من التصنيفات
        مثل : الأطباء - المطاعم ومحلات الأكل - الصيدليات - الأطباء البيطريون - الحرفيين - النقل والمواصلات - قسم خاص بمحلات المرأه والتجميل - الكافيهات والنوادي - محلات الملابس والأحذية - محلات الألكترونيات - معامل التحاليل الطبية،
        وأي بيانات اضافية اخري يتم اضافتها تباعا عن طريق ارسال المستخدمين البيانات لنا،
        عشان تقدر تضيف بيانات من داخل التطبيق يجب انشاء حساب اولا. 😃
    </string>
    <string name="free_app">
        التطبيق يعمل بشكل مجاني تماما وسيظل مجاني،
        وغير مقتصر علي اشخاص معينة، وأي بيانات مفيدة للناس وللقرية هيتم اضافتها. ❤😃
    </string>

    <string name="no_internet_connection">
        لا يـوجـد إنتـرنـت
    </string>
    <string name="contact_us">
        يمكنك مراسلتنا علي صفحتنا علي الفيسبوك لطرح أي أفكار جديدة للتطبيق،
         او الابلاغ عن المشاكل. 💬
    </string>

    <string name="create_account">
        2- أكتب اسمك، وبريدك الالكتروني، واختر كلمة مرور جديدة لا تقل عن 6 أحرف
        ثم اضغط علي انشاء حساب.
    </string>

    <string name="benefits_account">
         هتبقي مستخدم بشكل رسمي علي التطبيق وهتقدر تضيف بيانات جديدة للتطبيق.
         ومميزات تانية كتير هتكون متوفرة في التطبيق فيما بعد. 😃😎
    </string>
    <string name="add_firm">هتكتب فيها الاسم والعنوان ورقم التليفون، ووصف عن ما يقدمة المكان او اختصاص الدكتور (مثلا) ومتنساش تختار التصنيف.</string>
    <string name="data_added">"تم ارسال البيانات وسيتم الموافقة عليها قريبا  😃"</string>
    <string name="no_internet">"لا يوجد انترنت"</string>
    <string name="error_logIn">"خطأ في التسجيل يرجي اعادة المحاولة 😑"</string>
    <string name="action_settings">Settings</string>
    <string name="categories_fragment">الأقـسـام</string>
    <string name="about_fragment">معلومات عن التطبيق</string>
    <string name="setting_fragment">الإعدادات والحساب</string>
    <string name="add_data_fragment">إضافة البيانات</string>
    <string name="Choose">أختر التصنيف</string>
    <string name="news_fragment">آخر الأخبار</string>
    <string name="shareText">"قم بتحميل تطبيق أجهور الكبرى من خلال الرابط التالي https://play.google.com/store/apps/details?id=com.aghourservices"</string>
    <string name="choose_theme_text">أخـتيار مظهر للتطبيق</string>

    <!--animation duration-->
    <string name="shortDuration">300</string>
    <string name="mediumDuration">400</string>
    <string name="longDuration">700</string>
    <string name="title">تسجيل الخروج !</string>
    <string name="message">هل تريد تسجيل الخروج من حسابك؟</string>
    <string name="doneButton">تمام</string>
    <string name="positiveButton">نعم</string>
    <string name="negativeButton">لا</string>
    <string name="doneButtonMode">تطبيق</string>
    <string name="cancelButton">إلغاء</string>
    <string name="settings_fragment">الإعدادات</string>
    <string name="selected_item">تم اختيار</string>
    <string name="favorite_fragment">المفضلة</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="news_share">نسخ الخبر</string>
    <string name="whats_app_number">+201287303441</string>
    <string name="gmail_uri">mailto:aghourservices@gmail.com</string>
    <string name="create_account_first">إنشاء حساب 😃</string>
    <string name="create_account_to_publish">يجب إنشاء حساب أولا</string>
    <string name="should_create">أنشئ حساب حتي تستطيع إضافة بيانات !</string>
    <string name="should_to_add_article">أنشئ حساب حتي تستطيع إضافة أخبار !</string>
    <string name="defaultTheme">الوضع الإفتراضي للهاتف</string>
    <string name="light">فـاتـح</string>
    <string name="dark">داكـن</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_article">إضافة خبر</string>
    <string name="write_new_article">
        خـبـر جـديـد
    </string>

    <string name="menu_home">الرئيسية</string>
    <string name="menu_search">البحث</string>
    <string name="menu_add">إضافة</string>
    <string name="menu_fav">المفضلة</string>
    <string name="menu_news">الأخبار</string>
    <string name="copy_content_firm">copy_content_firm</string>
    <string name="share_firm">مشاركة</string>
    <string name="location_firm">location_firm</string>
    <string name="description_firm">description_firm</string>
    <string name="aghour_share_content">تمت المشاركة من خلال تطبيق أجهور الكبرى</string>
    <string name="noInternetConnections">تأكد من اتصالك بالانترنت</string>
    <string name="add_data_name">الاسم (دكتور، مطعم، صيدلية...الخ)</string>
    <string name="address">العنوان</string>
    <string name="phone_number">رقم التليفون</string>
    <string name="description">   بسم الله الرحمن الرحيم\nتوفي اليوم الأحد الموافق ٢٧/١١/٢٠٢٢الي رحمة الله تعالى\nالحاج عطا محمد عطيه السعداوي \nوالد كلا من\nالاستاذ محمد عطا السعداوي\nالاستاذ وائل عطا السعداوي\nوالمقدم عبدالرحمن عطا السعداوي\nواخو كلا من\nالمرحوم الحاج جوده محمد عطيه السعداوي \nوالمرحوم الحاج عبدالجواد محمد عطيه السعداوي
        \nوالحاج محمد محمد عطيه السعداوي\nوالوفاه في الاسكندريه\nوالدفنه غدا ان شاء الله\nبعد صلاة الظهر مباشرة\nوالصلاه عليه في مسجد\nسيدي جابر في  الاسكندريه \nوالبقاء لله</string>
    <string name="must_create_account">يجب إنشاء حساب أولا</string>
    <string name="create_accountBtn">انشاء حساب</string>
    <string name="about_app">عن التطبيق</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="connect_us">تــواصــل مــعــنا</string>
    <string name="facebook">فيسبوك</string>
    <string name="email">البريد</string>
    <string name="whatsapp">واتساب</string>
    <string name="share_app">شارك التطبيق مع أصدقائك</string>
    <string name="theme_app">مظهر التطبيق</string>
    <string name="rate_app">تقييم التطبيق</string>
    <string name="signIn">تسجيل دخول</string>
    <string name="skipLogin">تخطي التسجيل</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="no_favorites_found">لا يوجد إعجابات 🙁</string>
    <string name="check_network">تأكد من اتصالك بالانترنت</string>
    <string name="search">بحث</string>
    <string name="name">الأسم</string>
    <string name="comment">تعليق</string>
    <string name="write_a_comment">أكتب تعليق…</string>
    <string name="no_comments_yet">لا توجد تعليقات 🧐</string>
    <string name="cancel_update">إلغاء</string>
    <string name="update_comment">تـعـديـل</string>
    <string name="comments">الكومنتات</string>
    <string name="comment_tv">الـتعليقـات</string>
    <string name="add_a_comment">إضافة تعليق…</string>
    <string name="desc">الوصف</string>
    <string name="delete_comment">حذف التعليق</string>
    <string name="are_you_sure_to_delete_comment">هل أنت متأكد من حذف التعليق؟</string>
    <string name="delete">حذف</string>
    <string name="edit_comment">تعديل التعليق</string>
    <string name="edit">تـعـديـل</string>
    <string name="popup">⋮</string>
    <string name="delete_article"><font fgcolor="#ff2507">حــذف</font></string>
    <string name="like">أعجبني</string>
    <string name="dot">.</string>
    <string name="verified">أدمن</string>
    <string name="all_comments">كل التعليقات</string>
    <string name="users_likes">الأشخاص المعجبون</string>
    <string name="already_have_account_login">لديك حساب بالفعل؟   تسجيل دخول</string>
    <string name="invalid_email">بريد إلكتروني غير صالح</string>
    <string name="invalid_password">"أختر كلمة سر أكبر من 6 أحرف"</string>
    <string name="invalid_name">الأسم مطلوب</string>
    <string name="or">أو</string>
    <string name="not_have_account_register_now">ليس لديك حساب؟  أنشئ حساب</string>
    <string name="add_image">إضافة صورة</string>
    <string name="clear_image">إزالة الصورة</string>
    <string name="creating_account">جاري إنشاء الحساب…</string>
    <string name="logging_in">جاري تسجيل الدخول…</string>
    <string name="adding_data">جاري إضافة البيانات…</string>
    <string name="creating_article">جاري إضافة الخبر…</string>
    <string name="publish">نشر</string>
    <string name="create_article_failed">فشل إنشاء الخبر</string>
    <string name="try_again">حاول مرة تانية.</string>
    <string name="draft_articles">الأخبار المؤجلة</string>
    <string name="edit_profile">تعديل البروفايل</string>
    <string name="notifications">الإشعارات</string>
    <string name="you">بروفايلي</string>
    <string name="general_settings">الإعدادات العامة</string>
    <string name="profile_picture">الصورة الشخصية</string>

</resources>
