<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/categoriesFragment">

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.aghourservices.ui.fragment.CategoriesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categoriesFragment_to_firmsFragment"
            app:destination="@id/firmsFragment"
            app:enterAnim="@anim/fragment_enter"
            app:exitAnim="@anim/fragment_exit"
            app:popEnterAnim="@anim/fragment_enter_pop"
            app:popExitAnim="@anim/fragment_exit_pop" />
        <argument
            android:name="category_id"
            app:argType="integer" />
        <argument
            android:name="category_name"
            app:argType="string" />
        <action
            android:id="@+id/action_categoriesFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.aghourservices.ui.fragment.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/addDataFragment"
        android:name="com.aghourservices.ui.main.activity.AddDataActivity"
        android:label="@string/menu_add"
        tools:layout="@layout/activity_add_data" />

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.aghourservices.ui.fragment.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_newsFragment_to_addArticleFragment"
            app:destination="@id/addArticleFragment"
            app:enterAnim="@anim/fragment_enter"
            app:exitAnim="@anim/fragment_exit"
            app:popEnterAnim="@anim/fragment_enter_pop"
            app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.aghourservices.ui.fragment.FavoriteFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/firmsFragment"
        android:name="com.aghourservices.ui.fragment.FirmsFragment"
        android:label="FirmsFragment"
        tools:layout="@layout/fragment_firms">
        <argument
            android:name="category_id"
            app:argType="integer" />
        <argument
            android:name="category_name"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/addArticleFragment"
        android:name="com.aghourservices.ui.main.activity.AddArticleFragment"
        android:label="@string/add_article"
        tools:layout="@layout/activity_add_article" />

    <action
        android:id="@+id/action_categoriesFragment"
        app:destination="@id/categoriesFragment"
        app:enterAnim="@anim/fragment_enter"
        app:exitAnim="@anim/fragment_exit"
        app:popEnterAnim="@anim/fragment_enter_pop"
        app:popExitAnim="@anim/fragment_exit_pop"
        app:popUpTo="@id/categoriesFragment"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_searchFragment"
        app:destination="@id/searchFragment"
        app:enterAnim="@anim/fragment_enter"
        app:exitAnim="@anim/fragment_exit"
        app:popEnterAnim="@anim/fragment_enter_pop"
        app:popExitAnim="@anim/fragment_exit_pop"
        app:popUpTo="@id/categoriesFragment" />

    <action
        android:id="@+id/action_addDataFragment"
        app:destination="@id/addDataFragment"
        app:enterAnim="@anim/fragment_enter"
        app:exitAnim="@anim/fragment_exit"
        app:popEnterAnim="@anim/fragment_enter_pop"
        app:popExitAnim="@anim/fragment_exit_pop"
        app:popUpTo="@id/categoriesFragment" />

    <action
        android:id="@+id/action_favoriteFragment"
        app:destination="@id/favoriteFragment"
        app:enterAnim="@anim/fragment_enter"
        app:exitAnim="@anim/fragment_exit"
        app:popEnterAnim="@anim/fragment_enter_pop"
        app:popExitAnim="@anim/fragment_exit_pop"
        app:popUpTo="@id/categoriesFragment" />

    <action
        android:id="@+id/action_newsFragment"
        app:destination="@id/newsFragment"
        app:enterAnim="@anim/fragment_enter"
        app:exitAnim="@anim/fragment_exit"
        app:popEnterAnim="@anim/fragment_enter_pop"
        app:popExitAnim="@anim/fragment_exit_pop"
        app:popUpTo="@id/categoriesFragment" />
</navigation>