<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/dialogText"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap"
                tools:text="@string/edit" />

            <View
                android:id="@+id/under_line_view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/edit_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/underLine" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/under_line_view"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeErrorColor="@android:color/holo_red_light"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorPrimary"
                tools:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_info_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

                <requestFocus />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/cancel_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_layout"
                android:layout_marginTop="20dp"
                android:layout_toStartOf="@+id/update_btn"
                android:textColor="@color/clear"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/cancelButton" />

            <Button
                android:id="@+id/update_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_layout"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/update_comment" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>