<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textSize="22sp"
            android:fontFamily="@font/cairo_bold"
            android:text="تسجيل الدخول" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/phoneNumber"
                style="@style/modifiedEditText"
                android:drawableRight="@drawable/ic_phone"
                android:hint="@string/login_email_hint"
                android:inputType="phone|number"
                android:maxLines="1"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:fontFamily="@font/cairo_bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/login_button"
            android:text="تسجيل دخول"
            android:textColor="@color/blue200" />

        <TextView
            style="@style/parent"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/cairo_bold"
            android:gravity="right"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/blue200"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>