<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarBg"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/_1sdp"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/drawerToggle"
        app:title="@string/notifications"
        app:titleCentered="true"
        app:titleTextColor="@color/toolbarText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/progress_bar"
        android:progress="0"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:scaleX="0.11"
        android:scaleY="0.11"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notifications_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:background="@color/main_bg"
        tools:listitem="@layout/notification_card" />

    <LinearLayout
        android:id="@+id/noInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@mipmap/wifi"
            android:tint="@color/dialogText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:layout_gravity="center"
            android:text="@string/no_internet"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tryAgainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/try_again"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_20sdp" />
    </LinearLayout>

</RelativeLayout>
